# Inextractability

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: index.html
examples/: estimate_b.py  estimate_greedy_rate.py  quick_demo.py
inextractability/: __init__.py  core.py  utils.py
